--- a/feed/index.html
+++ b/feed/index.html
@@ -30,7 +30,7 @@
         <div class="container-fluid">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
-            href="../index.html"
+            href="/profile/"
           >
             <img
               src="../images/mdi_foot-print.png"
@@ -64,14 +64,10 @@
                 >
               </li>
               <li class="nav-item d-flex justify-content-end">
-                <a class="nav-link active text-light" href="./feed.html"
-                  >Feed</a
-                >
+                <a class="nav-link active text-light" href="/feed/">Feed</a>
               </li>
               <li class="nav-item d-flex justify-content-end">
-                <a class="nav-link text-light" href="./profile.html"
-                  >My Profile</a
-                >
+                <a class="nav-link text-light" href="/profile/">My Profile</a>
               </li>
             </ul>
           </div>
