--- a/feed/index.html
+++ b/feed/index.html
@@ -26,8 +26,8 @@
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-feed-page">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
+        <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-9">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
             href="/profile/"
@@ -57,16 +57,16 @@
             <ul class="navbar-nav">
               <li class="nav-item d-flex justify-content-end">
                 <a
-                  class="nav-link text-light"
+                  class="nav-link text-light mx-lg-2"
                   aria-current="page"
                   href="../index.html"
                   >Log Out</a
                 >
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link active text-light" href="/feed/">Feed</a>
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link text-light" href="/profile/">My Profile</a>
               </li>
             </ul>
