--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <header class="bg-secondary container-fluid">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
+        <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-9">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
             href="index.html"
