--- a/profile/index.html
+++ b/profile/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-profile-page">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
+        <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-10">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
             href="/feed/"
@@ -51,7 +51,7 @@
             id="navbarNavDropdown"
           >
             <ul class="navbar-nav">
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a
                   class="nav-link text-light"
                   aria-current="page"
@@ -59,10 +59,10 @@
                   >Log Out</a
                 >
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link active text-light" href="/feed/">Feed</a>
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link text-light" href="/profile/">My Profile</a>
               </li>
             </ul>
