--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             id="navbarNavDropdown"
           >
             <ul class="navbar-nav">
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a
                   class="nav-link active text-light"
                   aria-current="page"
@@ -58,10 +58,10 @@
                   >Log In</a
                 >
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link disabled text-primary" href="#">Feed</a>
               </li>
-              <li class="nav-item d-flex justify-content-end">
+              <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link disabled text-primary" href="#"
                   >My Profile</a
                 >
@@ -78,7 +78,7 @@
         <div class="col-md-6 d-flex justify-content-center">
           <figure class="figure text-dark bg-light border pb-4 pb-sm-5 pt-sm-2">
             <img
-              src="./images/collage-hiking-images-with-border.png"
+              src="./images/collage-hiking-images-with-border.jpeg"
               class="figure-img img-fluid rounded"
               alt="A generic square placeholder image with rounded corners in a figure."
             />
