--- a/profile/index.html
+++ b/profile/index.html
@@ -24,8 +24,11 @@
     <script defer type="module" src="../js/routes/logout.mjs"></script>
   </head>
   <body>
-    <header class="bg-secondary container-fluid" id="header-profile">
-      <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
+    <header class="bg-primary container-fluid mt-5" id="header-profile">
+      <nav
+        class="navbar navbar-expand-lg col-md-12 col-xxl-11"
+        data-bs-theme="dark"
+      >
         <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-10">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
@@ -88,7 +91,9 @@
               src="../images/Profile-image-hikes-inspire.jpg"
               alt="Profile image of user"
             />
-            <a class="btn btn-warning rounded-pill my-3 secondary-font"
+            <a
+              href="#"
+              class="btn btn-primary border-secondary rounded-pill my-3 secondary-font"
               >Follow <i class="fa-solid fa-plus"></i
             ></a>
           </div>
@@ -111,7 +116,7 @@
 
       <section class="container my-5">
         <div
-          class="row d-flex justify-content-center .justify-content-sm-around"
+          class="row d-flex justify-content-center justify-content-sm-around"
         >
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
@@ -224,24 +229,21 @@
         class="d-flex justify-content-center mb-5 to-top-button-container"
       ></div>
     </main>
-    <footer class="bg-secondary pt-5 pb-3">
-      <div class="social d-flex col justify-content-center mb-5">
+    <footer class="bg-secondary pt-5">
+      <div class="social d-flex col justify-content-center my-5">
         <a href="https://www.instagram.com/"
-          ><i class="fa-brands fa-instagram fa-lg mx-2"></i></a
+          ><i class="fa-brands fa-instagram fa-lg mx-3"></i></a
         ><a href="https://www.snapchat.com/"
-          ><i class="fa-brands fa-snapchat fa-lg mx-2"></i></a
+          ><i class="fa-brands fa-snapchat fa-lg mx-3"></i></a
         ><a href="https://twitter.com/"
-          ><i class="fa-brands fa-x-twitter mx-2"></i></a
+          ><i class="fa-brands fa-x-twitter mx-3"></i></a
         ><a href="https://www.facebook.com/"
-          ><i class="fa-brands fa-facebook mx-2"></i
+          ><i class="fa-brands fa-facebook mx-3"></i
         ></a>
       </div>
-      <ul class="list-inline d-flex col justify-content-center mb-3">
-        <li class="list-inline-item mx-2"><a href="#">About</a></li>
-        <li class="list-inline-item mx-2"><a href="#">Terms</a></li>
-        <li class="list-inline-item mx-2"><a href="#">Privacy Policy</a></li>
-      </ul>
-      <p class="copyright text-center">Hikes Inspire © 2024</p>
+      <p class="copyright text-center mt-5 pb-3 fst-italic">
+        Hikes Inspire © 2024
+      </p>
     </footer>
   </body>
 </html>
