--- a/registration/register.html
+++ b/registration/register.html
@@ -17,7 +17,8 @@
       src="https://kit.fontawesome.com/81a562339c.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../dist/css/index.css" />
+
+    <link rel="stylesheet" href="../css/theme.css" />
 
     <script defer type="module" src="../js/index.mjs"></script>
     <script defer type="module" src="../js/routes/login.mjs"></script>
