--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="./dist/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
     <script
@@ -23,25 +25,22 @@
     ></script>
   </head>
   <body>
-    <header class="bg-primary container-fluid mt-5">
-      <nav
-        class="navbar navbar-expand-lg col-md-12 col-xxl-11"
-        data-bs-theme="dark"
-      >
-        <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-9">
+    <header class="container-fluid">
+      <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
+        <div class="container-fluid d-flex justify-content-start">
           <a
-            class="navbar-brand text-light d-flex justify-content-center align-items-center"
-            href="index.html"
+            href="../index.html"
+            class="navbar-brand d-flex align-items-center"
           >
             <img
-              src="./images/mdi_foot-print.png"
-              class="d-inline-block align-center"
+              src="./images/_35efb29c-30b9-474c-b527-03e286548b5c.jpg"
+              class="logo-img"
               alt="Footprint logo linking to home page"
             />
-            <h1 class="primary-font text-info uppercase">Hikes Inspire</h1>
           </a>
         </div>
       </nav>
+      <hr class="border-1 border-secondary" />
     </header>
     <main class="d-flex justify-content-center">
       <section
